# climate-brain

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
climate_brain/: __init__.py  config.py  main.py  scheduler.py
climate_brain/api/: routes_people.py  routes_rooms.py  routes_status.py
climate_brain/db/: database.py  models.py
climate_brain/models/: comfort.py  optimizer.py  thermal.py
climate_brain/services/: ac_controller.py  switchbot.py  weather.py
docs/: HARDWARE_GUIDE.md
tests/: test_climate_brain.py
web_ui/: index.html
